# TinyMPC

./: CMakeLists.txt
examples/: CMakeLists.txt  cmsis_fixedpt_comparison_test.cpp  fixedpt_quadrotor_track_traj.cpp  quadrotor_track_traj.cpp
examples/problem_data/: quadrotor_100hz_params_fixedpt.hpp  quadrotor_50hz_params.hpp
examples/trajectory_data/: quadrotor_100hz_ref_hover_fixedpt.hpp
release/examples/: quadrotor_track_example
release/test/: test1
src/cmsis_tinympc/: CMakeLists.txt  Kbuild  cmsis_test.cpp
src/tinympc/: CMakeLists.txt  admm.cpp  codegen.cpp  constants.hpp  types.hpp
